--- a/mockup.html
+++ b/mockup.html
@@ -27,19 +27,19 @@
             <span> 10 </span>
           </li>
           <li>
-            <span> wine </span>
+            <span> kombucha </span>
             <span> 2 </span>
           </li>
           <li>
-            <span> iced coffe </span>
+            <span> iced coffee </span>
             <span> 1 </span>
           </li>
           <li>
-            <span> a </span>
+            <span> avocado </span>
             <span> 1 </span>
           </li>
           <li>
-            <span> pizza </span>
+            <span> egg rolls </span>
             <span> 1 </span>
           </li>
         </ul>
